# snack-manager-server

./: .env.docker-compose.template  .gitignore  .pre-commit-config.yaml  Dockerfile.local  Makefile  README.md  docker-compose.local.yml  manage.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.in  requirements.txt  tox.ini
.github/workflows/: lint.yml  test.yml
sh/entrypoints/: entrypoint-worker.local.sh  entrypoint.local.sh
snack/: asgi.py  celery.py  urls.py  wsgi.py
snack/core/: admin.py  apps.py  constants.py  exceptions.py  models.py  permissions.py  urls.py
snack/core/migrations/: 0001_initial.py  0002_user_is_deleted.py  0003_user_member_type.py
snack/core/serializers/: general_serializers.py  user_serializers.py
snack/core/views/: auth_views.py
snack/order/: admin.py  apps.py  constants.py  exceptions.py  filters.py  model_managers.py  model_mixins.py  models.py  tasks.py  urls.py
snack/order/migrations/: 0001_initial.py  0002_snack_desc_alter_snack_image.py  0003_alter_snack_name.py  0003_remove_snack_id_alter_snack_name.py  0004_rename_snacks_cart_order_carts.py  0005_order_status.py  (+20 more)
snack/settings/: base.py  dev.py  test.py
tests/: conftest.py  test_general_features.py
tests/fixtures/: orders.py  snacks.py  users.py
tests/test_cases_auth/: test_api_views_permissions.py  test_auth_serializers.py  test_auth_views.py
tests/test_cases_order/: test_celery_tasks.py  test_order_fixtures.py  test_order_models.py  test_order_serializers.py  test_order_views.py
tests/test_cases_user/: test_user_serializers.py
(+5 files in other folders)
